--- a/reservia.css
+++ b/reservia.css
@@ -100,6 +100,11 @@ button{
 	justify-content: space-between;
 
 }
+a.filtres{
+	padding-right: 50px;
+	padding-left: 10px;
+	color: black;
+}
 #filtres div{
 	display: flex;
 }
