--- a/mobile.css
+++ b/mobile.css
@@ -28,6 +28,9 @@
 	nav ul{
 		padding: 0;
 	}
+	.menu{
+		border-bottom: 3px solid rgb(19, 107, 248);
+	}
 	.filtres_column{
 		flex-wrap: wrap;
 	}
@@ -90,9 +93,9 @@ figure.populaires img{
 	flex-direction: column;
 }
 #section_activites figure{
-	margin: 0 auto;
+	margin: auto;
 	margin-bottom: 20px;
-width: 280px;
+width: 323px;
 border-radius: 24px;
 background-color: white;
 -webkit-box-shadow: 2px 1px 6px 5px rgba(0,0,0,0.22);
