--- a/mobile.css
+++ b/mobile.css
@@ -4,8 +4,12 @@
 		margin: 0;
 		padding: 0;
 	}
-	header{
+	header p{
+		margin-left: 10px;
      
+	}
+	form{
+		margin-left: 10px;
 	}
 	.header{
 		flex-direction: column;
@@ -27,6 +31,12 @@
 
 	nav ul{
 		padding: 0;
+	}
+
+	header h1{
+		font-size: 1.7rem;
+		margin-left: 10px;
+
 	}
 	.menu{
 		border-bottom: 3px solid rgb(19, 107, 248);
